--- a/app/src/main/res/layout/tab4.xml
+++ b/app/src/main/res/layout/tab4.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".tab4">
@@ -8,8 +9,13 @@
 
     <TextView
         android:id="@+id/tv_log"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:textIsSelectable="true"/>
-</ScrollView>
+        android:textIsSelectable="true" />
+
+    <fragment
+        android:id="@+id/frg_log"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+</android.support.constraint.ConstraintLayout>
