--- a/app/src/main/res/xml/pref_notification.xml
+++ b/app/src/main/res/xml/pref_notification.xml
@@ -4,24 +4,36 @@
          when checked/unchecked. -->
     <SwitchPreference
         android:defaultValue="true"
-        android:key="notifications_new_message"
-        android:title="@string/pref_title_new_message_notifications" />
+        android:key="notifications"
+        android:summary="Enable Notifications When an Rsync Job Starts"
+        android:summaryOff="Enable Notifications When an Rsync Job Starts"
+        android:summaryOn="Enable Notifications When an Rsync Job Starts"
+        android:title="@string/notifications" />
 
     <!-- Allows the user to choose a ringtone in the 'notification' category. -->
     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
     <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
     <RingtonePreference
         android:defaultValue="content://settings/system/notification_sound"
-        android:dependency="notifications_new_message"
-        android:key="notifications_new_message_ringtone"
+        android:dependency="notifications"
+        android:key="ringtone"
         android:ringtoneType="notification"
         android:title="@string/pref_title_ringtone" />
 
     <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
     <SwitchPreference
-        android:defaultValue="true"
-        android:dependency="notifications_new_message"
-        android:key="notifications_new_message_vibrate"
+        android:dependency="notifications"
+        android:key="vibrate"
         android:title="@string/pref_title_vibrate" />
+
+    <CheckBoxPreference
+        android:checked="false"
+        android:key="clear_log"
+        android:persistent="false"
+        android:summary="Check this box if you want to clear the Log"
+        android:summaryOff="Log will not be cleared"
+        android:summaryOn="Log will clear when you exit Settings"
+        android:title="Clear Log" />
+
 
 </PreferenceScreen>
