--- a/app/src/main/res/layout/status_row.xml
+++ b/app/src/main/res/layout/status_row.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/status"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -64,10 +63,9 @@
         android:id="@+id/tv_next_run"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
         android:text="Next Run:"
-        app:layout_constraintBaseline_toBaselineOf="@+id/tv_get_nextrun"
-        app:layout_constraintEnd_toStartOf="@+id/tv_get_nextrun" />
+        app:layout_constraintBaseline_toBaselineOf="@+id/tv_get_config_name"
+        app:layout_constraintStart_toStartOf="@+id/Last_Run" />
 
     <TextView
         android:id="@+id/Last_Run"
