--- a/app/src/main/res/layout/add_config.xml
+++ b/app/src/main/res/layout/add_config.xml
@@ -7,7 +7,6 @@
     tools:context=".addConfig">
 
     <ScrollView
-        android:id="@+id/addConfig"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -19,7 +18,6 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/srv_settings"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
@@ -95,6 +93,19 @@
                     app:layout_constraintBaseline_toBaselineOf="@+id/ed_srv_ip"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/ed_srv_ip" />
+
+                <ImageButton
+                    android:id="@+id/ib_info_daemon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:backgroundTint="@android:color/transparent"
+                    android:onClick="rsync_daemon_info"
+                    app:layout_constraintStart_toStartOf="@+id/ed_srv_port"
+                    app:layout_constraintTop_toBottomOf="@+id/ed_srv_port"
+                    app:srcCompat="@drawable/ic_info_black_24dp"
+                    android:contentDescription="info button" />
             </android.support.constraint.ConstraintLayout>
 
             <TextView
@@ -147,7 +158,6 @@
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/rs_opt"
@@ -216,6 +226,7 @@
                     android:layout_width="54dp"
                     android:layout_height="35dp"
                     android:layout_marginBottom="8dp"
+                    android:layout_marginStart="3dp"
                     android:layout_marginTop="16dp"
                     android:checked="false"
                     android:hint="-q"
@@ -317,15 +328,16 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_marginTop="8dp"
+                    android:backgroundTint="@android:color/transparent"
                     android:onClick="rsync_help"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:srcCompat="@android:drawable/ic_menu_help" />
+                    app:srcCompat="@drawable/help"
+                    android:contentDescription="options help" />
 
             </android.support.constraint.ConstraintLayout>
 
             <TextView
-                android:id="@+id/Save_Config"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/save_and_view_command"
@@ -395,8 +407,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_marginTop="16dp"
+                    android:enabled="false"
                     android:text="Run Now!"
-                    android:visibility="invisible"
+                    android:visibility="visible"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_rs_cmd_View" />
 
