--- a/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable-v24/ic_launcher_foreground.xml
@@ -1,34 +1,93 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportHeight="108"
-    android:viewportWidth="108">
-    <path
-        android:fillType="evenOdd"
-        android:pathData="M32,64C32,64 38.39,52.99 44.13,50.95C51.37,48.37 70.14,49.57 70.14,49.57L108.26,87.69L108,109.01L75.97,107.97L32,64Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="78.5885"
-                android:endY="90.9159"
-                android:startX="48.7653"
-                android:startY="61.0927"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M66.94,46.02L66.94,46.02C72.44,50.07 76,56.61 76,64L32,64C32,56.61 35.56,50.11 40.98,46.06L36.18,41.19C35.45,40.45 35.45,39.3 36.18,38.56C36.91,37.81 38.05,37.81 38.78,38.56L44.25,44.05C47.18,42.57 50.48,41.71 54,41.71C57.48,41.71 60.78,42.57 63.68,44.05L69.11,38.56C69.84,37.81 70.98,37.81 71.71,38.56C72.44,39.3 72.44,40.45 71.71,41.19L66.94,46.02ZM62.94,56.92C64.08,56.92 65,56.01 65,54.88C65,53.76 64.08,52.85 62.94,52.85C61.8,52.85 60.88,53.76 60.88,54.88C60.88,56.01 61.8,56.92 62.94,56.92ZM45.06,56.92C46.2,56.92 47.13,56.01 47.13,54.88C47.13,53.76 46.2,52.85 45.06,52.85C43.92,52.85 43,53.76 43,54.88C43,56.01 43.92,56.92 45.06,56.92Z"
-        android:strokeColor="#00000000"
-        android:strokeWidth="1" />
+    android:viewportWidth="49.090908"
+    android:viewportHeight="49.090908">
+    <group android:translateX="12.545455"
+        android:translateY="12.090909">
+        <group>
+            <clip-path android:pathData="M0,0h24v24h-24z M 0,0"/>
+            <path
+                android:pathData=" M 10.8 0.993 C 10.085 1.25 8.987 1.789 8.426 2.174 L 7.353 2.893 L 6.536 2.097 C 6.077 1.661 5.617 1.301 5.489 1.301 C 5.336 1.301 5.26 2.405 5.311 3.997 L 5.387 6.693 L 8.068 6.693 C 9.523 6.693 10.723 6.616 10.723 6.513 C 10.723 6.411 10.315 5.897 9.804 5.384 L 8.911 4.459 L 9.702 3.792 C 11.617 2.174 14.987 2.226 17.055 3.895 C 17.464 4.228 18.128 4.999 18.511 5.589 C 19.123 6.591 19.302 6.693 20.196 6.693 C 20.732 6.693 21.191 6.616 21.191 6.539 C 21.191 5.949 19.404 3.201 18.613 2.559 C 16.315 0.736 13.251 0.12 10.8 0.993 Z "
+                android:fillColor="#000000"/>
+            <path
+                android:pathData=" M 18.128 7.951 C 18 8.234 17.872 10.082 17.872 12.085 C 17.872 14.088 18 15.936 18.128 16.219 C 18.383 16.655 18.689 16.707 20.962 16.707 C 23.464 16.707 23.515 16.707 23.745 16.039 C 23.898 15.68 24 13.908 24 12.085 C 24 10.262 23.898 8.491 23.745 8.131 C 23.515 7.463 23.464 7.463 20.962 7.463 C 18.689 7.463 18.383 7.515 18.128 7.951 Z  M 22.979 10.801 C 22.979 12.265 22.877 12.855 22.672 12.881 C 22.494 12.907 21.804 12.932 21.115 12.932 C 20.221 12.958 19.94 13.061 20.043 13.318 C 20.119 13.523 20.17 13.805 20.17 13.959 C 20.17 14.139 20.349 14.036 20.553 13.78 C 20.757 13.497 20.936 13.42 20.936 13.574 C 20.936 14.062 21.447 13.934 21.472 13.42 C 21.472 13.009 21.498 13.009 21.677 13.446 C 21.779 13.703 21.932 13.908 22.034 13.908 C 22.723 13.831 22.979 13.934 22.979 14.268 C 22.979 14.576 22.57 14.653 20.936 14.653 C 19.302 14.653 18.894 14.576 18.894 14.268 C 18.894 14.062 19.047 13.882 19.251 13.882 C 19.481 13.882 19.609 13.651 19.583 13.369 C 19.557 13.086 19.404 12.855 19.226 12.855 C 18.97 12.855 18.894 12.316 18.894 10.801 L 18.894 8.747 L 20.936 8.747 L 22.979 8.747 L 22.979 10.801 Z "
+                android:fillColor="#000000"/>
+            <path
+                android:pathData=" M 0 9.518 L 0 10.288 L 4.34 10.288 L 8.681 10.288 L 8.681 9.518 L 8.681 8.747 L 4.34 8.747 L 0 8.747 L 0 9.518 Z "
+                android:fillColor="#000000"/>
+            <path
+                android:pathData=" M 0 12.085 L 0 12.855 L 4.34 12.855 L 8.681 12.855 L 8.681 12.085 L 8.681 11.315 L 4.34 11.315 L 0 11.315 L 0 12.085 Z "
+                android:fillColor="#000000"/>
+            <path
+                android:pathData=" M 0 14.653 L 0 15.423 L 4.34 15.423 L 8.681 15.423 L 8.681 14.653 L 8.681 13.882 L 4.34 13.882 L 0 13.882 L 0 14.653 Z "
+                android:fillColor="#000000"/>
+            <path
+                android:pathData=" M 5.362 17.939 C 5.362 18.812 6.689 21.072 7.736 21.996 C 9.421 23.459 10.8 23.973 13.149 23.999 C 15.217 24.024 16.289 23.691 18.153 22.458 C 18.843 22.022 18.843 22.022 19.66 22.946 C 20.119 23.485 20.579 23.896 20.706 23.896 C 20.834 23.896 20.936 22.689 20.936 21.226 L 20.936 18.581 L 19.762 18.401 C 18.077 18.17 15.574 18.196 15.574 18.453 C 15.574 18.555 15.983 19.043 16.468 19.531 C 17.515 20.558 17.413 20.764 15.523 21.585 C 12.945 22.689 9.779 21.791 8.221 19.454 C 7.813 18.864 7.43 18.17 7.328 17.914 C 7.098 17.272 5.362 17.297 5.362 17.939 Z "
+                android:fillColor="#000000"/>
+            <path
+                android:pathData="M18.929,8.976h4.085v5.784h-4.085z"
+                android:strokeLineJoin="round"
+                android:strokeWidth="1"
+                android:fillColor="#FFFFFF"
+                android:strokeColor="#DADADA"
+                android:strokeLineCap="butt"/>
+            <path
+                android:pathData="M18.974,8.927h3.994v1.835h-3.994z"
+                android:strokeLineJoin="round"
+                android:strokeWidth="1"
+                android:fillColor="#484848"
+                android:strokeColor="#DADADA"
+                android:strokeLineCap="butt"/>
+            <path
+                android:fillColor="#FF000000"
+                android:pathData="M19.075,12.697L22.868,12.697"
+                android:strokeLineJoin="round"
+                android:strokeWidth="1"
+                android:strokeColor="#6D6D6D"
+                android:strokeLineCap="butt"/>
+            <path
+                android:pathData=" M 0.388 9.501 C 0.388 9.381 0.484 9.284 0.603 9.284 C 0.722 9.284 0.819 9.381 0.819 9.501 C 0.819 9.621 0.722 9.718 0.603 9.718 C 0.484 9.718 0.388 9.621 0.388 9.501 Z "
+                android:strokeLineJoin="round"
+                android:strokeWidth="0.563"
+                android:fillColor="#FFFFFF"
+                android:strokeColor="#DADADA"
+                android:strokeLineCap="butt"/>
+            <path
+                android:pathData=" M 0.388 12.084 C 0.388 11.965 0.484 11.868 0.603 11.868 C 0.722 11.868 0.819 11.965 0.819 12.084 C 0.819 12.204 0.722 12.301 0.603 12.301 C 0.484 12.301 0.388 12.204 0.388 12.084 Z "
+                android:strokeLineJoin="round"
+                android:strokeWidth="0.563"
+                android:fillColor="#FFFFFF"
+                android:strokeColor="#DADADA"
+                android:strokeLineCap="butt"/>
+            <path
+                android:pathData=" M 0.444 14.711 C 0.444 14.61 0.528 14.528 0.631 14.528 C 0.735 14.528 0.819 14.61 0.819 14.711 C 0.819 14.812 0.735 14.894 0.631 14.894 C 0.528 14.894 0.444 14.812 0.444 14.711 Z "
+                android:strokeLineJoin="round"
+                android:strokeWidth="0.75"
+                android:fillColor="#FFFFFF"
+                android:strokeColor="#DADADA"
+                android:strokeLineCap="butt"/>
+            <path
+                android:pathData=" M 2.03 9.501 C 2.03 9.448 2.073 9.405 2.125 9.405 C 2.178 9.405 2.221 9.448 2.221 9.501 C 2.221 9.554 2.178 9.597 2.125 9.597 C 2.073 9.597 2.03 9.554 2.03 9.501 Z "
+                android:strokeLineJoin="round"
+                android:strokeWidth="0.75"
+                android:fillColor="#E7E767"
+                android:strokeColor="#E7E767"
+                android:strokeLineCap="butt"/>
+            <path
+                android:pathData=" M 1.972 12.112 C 1.972 12.059 2.015 12.016 2.068 12.016 C 2.121 12.016 2.164 12.059 2.164 12.112 C 2.164 12.165 2.121 12.208 2.068 12.208 C 2.015 12.208 1.972 12.165 1.972 12.112 Z "
+                android:strokeLineJoin="round"
+                android:strokeWidth="0.75"
+                android:fillColor="#E7E767"
+                android:strokeColor="#E7E767"
+                android:strokeLineCap="butt"/>
+            <path
+                android:pathData=" M 2.001 14.723 C 2.001 14.67 2.044 14.627 2.097 14.627 C 2.15 14.627 2.192 14.67 2.192 14.723 C 2.192 14.776 2.15 14.819 2.097 14.819 C 2.044 14.819 2.001 14.776 2.001 14.723 Z "
+                android:strokeLineJoin="round"
+                android:strokeWidth="0.75"
+                android:fillColor="#E7E767"
+                android:strokeColor="#E7E767"
+                android:strokeLineCap="butt"/>
+        </group>
+    </group>
 </vector>
