--- a/app/src/main/res/drawable/toggle_selector.xml
+++ b/app/src/main/res/drawable/toggle_selector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/rectangle" android:state_checked="true"/>
-    <item android:drawable="@drawable/rectangle_transp" android:state_checked="false"/>
+    <item android:drawable="@drawable/circle" android:state_checked="true"/>
+    <item android:drawable="@drawable/circle_transparent" android:state_checked="false"/>
 </selector>
